# TDDCPP

./: CMakeLists.txt  main.cpp
SoundexCore/: CMakeLists.txt  Soundex.cpp  Soundex.h
SoundexCore/unit_test/: CMakeLists.txt  SoundexTest.cpp  SoundexTest.h
cmake/Modules/: gmock.cmake
